Fixed an issue where coverage diff didn't run on windows and also fixed an ArrayIndexOutOfBounds exception